<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".MainActivity">


    <EditText
        android:id="@+id/et_Question"
        android:layout_width="match_parent"
        android:layout_height="100dp"
        android:layout_marginStart="24dp"
        android:layout_marginTop="62dp"
        android:layout_marginEnd="24dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/question"
        android:inputType="text"
        android:textAlignment="center"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        android:importantForAutofill="no" />

    <EditText
        android:id="@+id/et_OptionA"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="50dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/option_a"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Question"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_OptionB"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/option_b"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_OptionA"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_OptionC"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/option_c"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_OptionB"
        android:autofillHints="no" />

    <EditText
        android:id="@+id/et_OptionD"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/option_d"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_OptionC"
        android:autofillHints="" />

    <EditText
        android:id="@+id/et_Ans"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="8dp"
        android:layout_marginEnd="32dp"
        android:background="@drawable/text_shape"
        android:ems="10"
        android:hint="@string/answer"
        android:inputType="text"
        android:padding="5dp"
        android:textAlignment="center"
        android:textColor="@color/black"
        android:textColorHint="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_OptionD"
        android:autofillHints="no" />

    <LinearLayout
        android:id="@+id/btn_Submit"
        android:layout_width="100dp"
        android:layout_height="35dp"
        android:layout_marginTop="42dp"
        android:gravity="center"
        app:layout_constraintEnd_toEndOf="parent"
        android:background="@drawable/text_shape"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_Ans">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/submit"
            android:textStyle="bold"
            android:textColor="#ff9999"
            />
    </LinearLayout>
</androidx.constraintlayout.widget.ConstraintLayout>